<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/img_album_cover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:padding="2dp"
            android:background="@color/black"
            android:layout_gravity="center"
            tools:src="@tools:sample/avatars"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/tv_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/album" />

        <TextView
            android:id="@+id/tv_album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="8dp"
            android:text="@string/album_name" />

        <TextView
            android:id="@+id/tv_artist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/artist_name" />

        <TextView
            android:id="@+id/tv_release_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:text="@string/release" />

        <Button
            android:id="@+id/btn_more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:backgroundTint="@color/yellow_500"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:text="@string/more_info"
            android:autoLink="web"
            android:onClick="moreInfoGeniusPage"/>

        <TextView
            android:id="@+id/tv_label_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="15dp"
            android:text="@string/label_name" />

        <View
            style="@style/hr_line"/>

        <TextView
            android:id="@+id/tv_about_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/about_album"/>

        <TextView
            android:id="@+id/tv_album_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/description" />

        <View
            style="@style/hr_line"/>

        <TextView
            android:id="@+id/tv_track_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/track_list"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_track_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/track_names"/>

    </LinearLayout>
</ScrollView>
